-fixed offsetting issues on Home and Article Creator pages; - added collapsable feature on compact version

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#article {
+  margin-left: 15%;
+  margin-right: 15%;
+
+}
